# Phoenix-s-Interior-Ballistic-Solver-PIBS

./: .gitignore  CONTRIBUTING.md  PIBSv0.5.5.spec  README.cn.md  README.md  auto-singlefile.bat  compute_prop.py  generate_executable.py  multifile.json  pre-commit  pyproject.toml  run_pibs.py  singlefile.json  sort_localization.py  test_guidegraph.py
example/: FRG_120x570_M829.json  USSR_30x165_2A42_etc.json  USSR_30x165_ground_full_caliber.json  USSR_57x348SR.json  USSR_57x348SR_Normal.json
examples/: FRG_120x570_Rh-120(L44)_M829.json  PRC_100_Type6973_APFSDS.json  PRC_100_Type6973_HEAT.json  PRC_100_Type6973_HEFrag(FS).json  USSR_100x192_2A70_3UOF17.json  USSR_100x192_2A70_3UOF19.json  USSR_115x728R_U-5TS(2A20)_3BM3.json  USSR_125_D-81(2A26)_3VBM3.json  USSR_30x165_2A42_OFZ.json  USSR_30x165_AO18.json  USSR_57x348_S-60_UOR281.json
examples/PRC/: PRC_100x703_Type69,73,86_APFSDS.json  PRC_100x703_Type69,73,86_HEAT.json  PRC_100x703_Type69,73,86_HEFrag(FS).json  PRC_100x703_Type86_APFSDS(W).json  PRC_120x740_PTZ89_APFSDS(W).json  PRC_120x790_WZ122_APFSDS.json  PRC_120x790_WZ122_HEAT.json  PRC_120x790_WZ122_HEFrag(FS).json
examples/USSR/: USSR_100x192_2A70_3UOF17.json  USSR_100x192_2A70_3UOF19.json  (+11 more)
excluded_examples/: references_collage.md
pibs/: __init__.py  dispatch.py  guidegraph.py  info_frame.py  interior_ballistics.py  interior_ballistics_frame.py  lang.py  locWidget.py  localized_widget.py  misc.py  notebook_frame.py  sort_localization.py  table_frame.py  theme.py  tip.py
scripts/: compute_prop.py  handle_splash.py  sort_localization.py  test_guidegraph.py
unchecked_examples/: PRC_20_Type71_HESDT.json  PRC_37_Type76_HEIT.json  PRC_57_Type76_HEIT.json  USSR_23x115_NR-23_OZT.json  USSR_37x252_UOR-167.json  USSR_57x348_S-60_UOR-281.json  USSR_57x348_ZIF-74_UFB-71.json
(+406 files in other folders)
